--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sick-fits-backend",
+  "name": "fullstack-bootstrap-backend",
   "version": "2.0.0",
   "private": true,
-  "author": "Wes Bos",
+  "author": "Rick Janusz",
   "license": "MIT",
   "scripts": {
     "dev": "keystone-next",
@@ -71,5 +71,5 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "repository": "https://github.com/wesbos/advanced-react"
+  "repository": "https://github.com/rickjanusz/fullstack-bootstrap-backend"
 }
